Fixed overflow of topic title on main page.

--- a/basic.styl
+++ b/basic.styl
@@ -787,6 +787,8 @@ tile-padding()
         .discussion__topic
             margin 0 -5px
             padding 0.1em 5px
+            .discussion__link--title
+                flex-shrink 1
 
         @media break-point
             width 100%
